# primitiv

./: .gitignore  CLAUDE.md  COMPONENT-SIZE-VARIANT-CONVENTION.md  Cargo.toml  README.md  ROADMAP.md  button-component-set-layout.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/commands/: scaffold-component.md
.github/workflows/: deploy-docs.yml
apps/docs/: .gitignore  index.md  package.json
apps/harmoni-figma-plugin/: vitest.config.ts
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/workbench/: MIGRATION.md  vite.config.ts
crates/harmoni-core/: Cargo.toml
crates/harmoni-wasm/: Cargo.toml
crates/primitiv-cli/: Cargo.toml
crates/primitiv-cli/src/: cli.rs  cli_tests.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  run.rs  run_tests.rs
crates/primitiv-cli/src/commands/: add.rs  add_tests.rs  init.rs  init_tests.rs  mod.rs  tokens.rs  tokens_tests.rs
crates/primitiv-cli/src/ports/: mod.rs  output.rs  output_tests.rs
crates/primitiv-cli/tests/: cli.rs
crates/primitiv-core/: Cargo.toml
crates/primitiv-emit/: Cargo.toml
crates/primitiv-wasm/: Cargo.toml
crates/primitiv-wasm/src/: lib.rs  types.rs
docs/: button-build-plan.md  character-brief.md  consumption-design.md  transfer-and-next-steps.md
docs/rfcs/: 0001-token-architecture.md  0002-harmoni-to-intent-to-plugin.md  (+6 more)
logo-concepts/: gen_asymmetric.py  gen_g3f_gap.py  gen_g3f_gap2.py  gen_harmoni.py  gen_harmoni_ring.py  gen_tune_c1.py  variants.js
registry/: registry.json
(+339 files in other folders)
