[package]
name = "primitiv-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
primitiv-core = { path = "../primitiv-core" }
palette = "0.7.6"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"                         # High-performance bridge for Serde <-> JS
serde = { version = "1.0", features = ["derive"] }
